<resources>
    <string name="app_name">My Application</string>
    <string name="register">Regístrate</string>
    <string name="dontHaveAccount">No tienes una cuenta?</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="forgotPassword">¿Has olvidado la contraseña?</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="haveAccount">¿Ya tienes una cuenta?</string>
    <string name="logo">Logo</string>
    <string name="titleRegister2">¡Bienvenido! Ajusta tu cuenta a tu gusto</string>
    <string name="chooserAccountType">Elige el tipo de cuenta: ¿Eres músico o un local que quiere recibir actuaciones?</string>
    <string name="musician">Músico</string>
    <string name="local">Local</string>
    <string name="warningAccountType">¡Asegurate, una vez elegido no lo podrás cambiar!</string>
    <string name="confirm">Confirmar</string>
    <string name="type_a_message">Escribe un mensaje...</string>
    <string-array name="musical_languages">
        <item>Inglés</item>
        <item>Español</item>
        <item>Francés</item>
    </string-array>
    <string-array name="genres">
        <item>Rock</item>
        <item>Jazz</item>
        <item>Clasica</item>
        <item>Pop</item>
        <item>HipHop</item>
        <item>Latina/Reggaeton</item>
        <item>Electronica</item>
        <item>Soundtrack</item>
        <item>Faluta</item>
        <item>Otros</item>
    </string-array>
</resources>