<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivityAccountType">

    <EditText
        android:id="@+id/confirmpasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textSize="@dimen/hintLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/hintLogin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/hintLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="216dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logogigfinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/continueButton"
        android:layout_width="@dimen/loginbuttonwidth"
        android:layout_height="@dimen/loginbuttonheight"
        android:layout_marginTop="132dp"
        android:background="@drawable/blue_rectangle"
        android:textColor="@color/white"
        android:text="Crear Cuenta"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpasswordEditText"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center|left"
        android:paddingTop="4dp"
        android:text="@string/logIn"
        android:textColor="@color/blue"
        android:textSize="@dimen/textLogin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_marginStart="76dp"
        android:gravity="center|right"
        android:text="@string/haveAccount"
        android:textSize="@dimen/textLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />

</androidx.constraintlayout.widget.ConstraintLayout>