<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/titleRegister2"
        android:textSize="@dimen/titleRegister"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:text="@string/chooserAccountType"
        android:textSize="@dimen/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/imgSelectLocal"
        android:layout_width="139dp"
        android:layout_height="41dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/selectlocalwhite"
        app:layout_constraintBottom_toTopOf="@+id/warningMessage"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgSelectMusician"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/selectmusicianviolet"
        app:layout_constraintBottom_toTopOf="@+id/warningMessage"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:padding="15dp"
        android:text="@string/warningAccountType"
        android:textColor="@color/black"
        android:textSize="@dimen/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="359dp"
        />

    <ImageView
        android:id="@+id/signupButton"
        android:layout_width="@dimen/loginbuttonwidth"
        android:layout_height="@dimen/loginbuttonheight"
        android:background="@drawable/blue_button_register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="525dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
